# pure-smart-sop

./: .editorconfig  .gitignore  .pre-commit-config.yaml  06-绋嬪簭绠＄悊妯″潡鍔熻兘璇存槑.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  db.py  deps.py  errors.py  logging_config.py  main.py  middleware.py  permissions.py  security.py  seed.py  storage.py  tenant.py  tenant_middleware.py
backend/tests/: conftest.py  test_asset_downtime_cascade.py  test_attachment_tenant_security.py  test_auth_deps.py  test_billing_subscription_api.py  test_config_jwt.py  test_config_secret_guard.py  test_cookie_auth.py  test_cost_category_api.py  test_customer_relations.py  test_logout_cookie.py  test_meter_reading_edit_freq_api.py  test_migration_roundtrip.py  test_node_check_model.py  test_node_check_service.py  test_node_checks_api.py  test_node_editable_guard.py  test_node_numbering_gating.py  test_notifications_api.py  test_part_location_relation.py  test_part_pm_relation.py  test_permissions_phase3b.py  test_permissions_phase4.py  test_phase0_hardening.py  test_platform_subscription_api.py  test_pm_api.py  test_procedure_reference_service.py  test_procedure_references_api.py  test_purchase_order_api_actions.py  test_purchase_order_category_api.py  test_purchase_order_fields.py  test_security.py  test_sequence.py  test_sop_tenancy_hardening.py  test_tenant_context.py  test_user_create_guards.py  test_user_disable_api.py  (+14 more)
(+896 files in other folders)
